--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
-{
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+﻿{
+  "version": 2,
+  "builds": [
+    { "src": "Web/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "Web/$1" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" }
+      ]
+    }
   ]
 }
